feat: update dataref apis
